@@ -5365,9 +5365,10 @@ newshells_err=Failed to save custom shells
 newshells_ecannot=You are not allowed to edit custom shells
 newshells_eshell=Non-existent shell in row $1
 newshells_edesc=Missing description in row $1
-newshells_eowner=One or both of the Admin or Mailbox checkboxes must be selected in row $1
+newshells_eowner=One or both of the Admin, Mailbox or Reseller checkboxes must be selected in row $1
 newshells_eowners=No shells were selected for domain administrators
 newshells_emailboxes=No shells were selected for mailboxes
+newshells_eresellers=No shells were selected for resellers
 newshells_eownerdef=Exactly one shell must be the default for domain administrators
 newshells_emailboxdef=Exactly one shell must be the default for mailboxes
 newshells_id=Access
